[workspace]
members = [
    "tokio_doc/my_redis",
    "rust_book/concurrency",
    "rust_book/generic_example",
    "rust_book/guessing_game",
    "rust_book/hello_server",
    "rust_book/minigrep",
    "rust_book/resaurant",
    "rust_book/trait_example",
    "rust_book/trait_oop",
    "playground/async_await",

    "crust_of_rust/strsplit",   # lifetime annotation.
    "crust_of_rust/vecmac", # declarative macros.
]
